# WPILib_Studica_VMX

./: CMakeLists.txt
XDrive/.wpilib/: wpilib_preferences.json
XDrive/gradle/wrapper/: gradle-wrapper.properties
XDrive/src/main/cpp/subsystems/: Training.cpp
XDrive/src/main/include/: Constants.h
XDrive/src/main/include/subsystems/: Training.h  TrainingTest.cpp
